Fixed the link to Font-Awesome stylesheet and social icons spacing in footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -404,7 +404,6 @@ figcaption {
 }
 
 footer {
-    height: 260px;
     z-index: 100;
 }
 
